--- a/index.html
+++ b/index.html
@@ -5,15 +5,77 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daniel Reilly Portfolio</title>
+  <link rel="reset" href="./assets/css/reset.css"/>
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <h1>Daniel Reilly</h1>
+        <nav class="nav">
+            <ul>
+                <li>
+                    About Me
+                </li>
+                <li>
+                    Work
+                </li>
+                <li>
+                    Contact
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-        
+        <section class="section-header">
+            <h2>About Me</h2>
+                <div class="div">
+                    <p>At 18, in 2015 I started a grand journey by enlisting in the United States Navy. Leaving my home in Florida to go to Great Lakes Illinois to attend
+                     Bootcamp in January of 2015 I spent 2 months learning the many different skills required to be a member of the Military.
+                     After completing Bootcamp in February I remained in the Great Lakes ares for 6 months as I learned and perfected my craft, completing A school and
+                      becoming an Interior Communications Electrician and also being promoted to the rank of E-4, becoming a Petty Officer Third Class.
+                      My journey through the many different schools provided to me to become an outstanding technician did not end there. I was provided an additional "C" school 
+                      to learn how to work on a specific system called Fiber Optics Data Multiplexing System or FODMS for short. After not only completing my school but being given multiple 
+                      student of the week awards and finishing my C school as the top student I was finally on my way to my chosen ship, the USS McCampbell DDG-85 stationed in Yokosuka Japan.
+                      I arrived at my new command in October of 2015, quickly having to not only get used to a foreign land but also to a new way of life. I wanted to make a name for myself as
+                      being a technician that you could trust to fix the problem when called upon so I threw myself into my craft. All throughout my C school we were told by our instructor to not
+                      waste our time worrying about small repeated faults that came up within our system because nobody was able to get a FODMS system without faults, there would always be faults within
+                      our system that didnt have an impact on the normal day to day operation but would appear no matter what we did. Being stubborn and with something to prove I decided to take that as a
+                      challenge and devoted my time to having the perfect system. After 6 months of constant troubleshooting and repairing small issues I had done it, I had the only 0 fault FODMS system 
+                      in the entire navy. After 3 years spent with the USS McCampbell it was finally my time to leave and I was finally able to go back to America, being stationed this time in San Diego California
+                      at the largest military hospital NMCSD. There my responsabilities were to secure and destroy computers and medical information that contained sensative information realating
+                      to patients and faculty. For another 3 years this was my job until finally I was on the way out of the navy, on December 21st 2020 I was finally making my way back home after 6 long years.
+                      I had a lot of thinking to do for what the future held for me, I finally made the decision to try and break my way into a new way of life by enrolling in the UCF coding bootcamp to get
+                      get started in my new career.
+                    </p>
+                </div>
+        </section>
+        <section class="section-header">
+            <h2>Work</h2>
+                <div>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                </div>
+        </section>
+        <section class="section-header">
+            <h2>Contact Me</h2>
+                <div>
+                    <ul class="personal-link">
+                        <li>
+                        407-853-9427
+                        </li>
+                        <li>
+                            <a href="dan.c.reilly@gmail.com"> Email</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/Danocide"> GitHub</a>
+                        </li>
+                    </ul>
+                </div>
+        </section>
     </main>
 </body>
