--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
             <h2>Work</h2>
                 <div>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
-                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        <div id="projects">
+                            <a href="https://hezakai.github.io/CGD/">Cheap Game Deals</a>
+                            <img id="imgSize" src="./assets/images/CGDresultspage.png">
+                        </div>
                     </p>
                 </div>
         </section>
